packages/build/tests/error/monitor/fixtures/ipc/plugin.js
module.exports = {
  onPreBuild() {
    process.exit()
  },
  onBuild() {},
}
